--- a/NPHSApp/Info.plist
+++ b/NPHSApp/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleIcons~ipad</key>
 	<dict/>
 	<key>CFBundleIdentifier</key>
-	<string>com.NPHS.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.NPHSApp.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
